--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-<<<<<<< HEAD
   <title>M Ali | Portfolio</title>
-=======
-  <title M Ali | Portfolio</title>
->>>>>>> 12db54dda8a9e2856005962532b8219a5eb1254d
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
@@ -22,7 +18,7 @@
     content="https://raw.githubusercontent.com/">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://alich11416181vercel.app">
   <meta property="og:type" content="website">
   <meta property="og:title" content="alichaudhary | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
